# edu-ntnu-idatt2503

./: .directory  .gitignore  README.md  fuzz_test.c  main.c
assignment-01/: hjelp.txt
assignment-02/: README
assignment-03/: CMakeLists.txt  main-ctf.c
assignment-04/: .directory  README
assignment-04/c_0402/: CMakeLists.txt  main.c
assignment-04/cpp_0402/: CMakeLists.txt  main.cpp
assignment-05/: CMakeLists.txt  README  escape.c  escape.h  main.c
assignment-05/corpus/: seed5.txt  seed7.txt
assignment-05/tests/: CMakeLists.txt  escape_fuzzer_test.c  escape_test.c
assignment_01-exploits_01/: README  solution-ex01.md
assignment_02-exploits_02/: solution-ex02.md
assignment_03-exploits_03/: README  main.c
assignment_04-security_01/rust_0402/: Cargo.toml
assignment_05-security_02/: escape.h  main.c
assignment_05-security_02/corpus/: seed8.txt
assignment_05-security_02/tests/: CMakeLists.txt  escape_fuzzer_test.c
assignment_06-security_03/ex-0601-cpp/: CMakeLists.txt  main.cpp
assignment_06-security_03/ex-0601-cpp-timer/: CMakeLists.txt  main.cpp
assignment_06-security_03/ex-0601-python/: main.py
assignment_07-crypto_01/: 05_ciphertext.txt  05_ciphertext_guesswork-01.txt  05_ciphertext_guesswork-02.txt  ass_07_crypto01_problem5_ciphertext.txt  report-assignment_07-crypto_01.md
assignment_07-crypto_01/ass_07_crypto_01/: a07_c01.ipynb
assignment_08-crypto_02/: report-assignment_08-crypto_02-v2.md
assignment_08-crypto_02/cryptohack_challenges/: cryptohack-introduction_to_cryptohack.ipynb  (+2 more)
assignment_09-crypto_03/: assignment_09_krypto_03.ipynb  report-assignment-09-krypto-03.md
(+9 files in other folders)
